@@ -9,11 +9,12 @@ import com.myspringproject.repository.CafeRepository;
 import com.myspringproject.validation.CafeValidatorService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -24,6 +25,9 @@ public class CafeServiceImpl implements CafeService {
     private final CafeMapper cafeMapper;
     private final CafeValidatorService cafeValidatorService;
 
+
+    private static final int DEFAULT_PAGE = 0;
+    private static final int DEFAULT_PAGE_SIZE = 25;
 
 
     @Override
@@ -95,20 +99,46 @@ public class CafeServiceImpl implements CafeService {
     }
 
     @Override
-    public List<CafeResponseDto> search(String name, String address) {
-        List<Cafe> cafes = cafeRepository.find(name, address);
+    public Page<CafeResponseDto> search(String name, String address, Integer pageNumber, Integer pageSize) {
+
+
+        Page<Cafe> cafes = cafeRepository.findAllByNameStartsWithIgnoreCaseOrAddressStartsWithIgnoreCase(name, address, null);
 
         if (cafes.isEmpty()) {
-            log.debug("Cafe with name: {} not found.", name);
-            throw new NotFoundException("Cafe with name: " + name + " not found");
+            log.debug("Cafe not found not found.");
+            throw new NotFoundException("Cafe not found not found.");
         }
 
-        return cafes.stream()
+        return new PageImpl<>(cafes.stream()
                 .map(cafe -> {
                     CafeResponseDto dto = new CafeResponseDto();
                     dto.setName(cafe.getName());
                     dto.setAddress(cafe.getAddress());
                     return dto;
-                }).collect(Collectors.toList());
+                }).toList());
     }
+
+//    public PageRequest buildPageRequest(Integer pageNumber, Integer pageSize) {
+//        int queryPageNumber;
+//        int queryPageSize;
+//
+//        if (pageNumber != null && pageNumber > 0) {
+//            queryPageNumber = pageNumber - 1;
+//        } else {
+//            queryPageNumber = DEFAULT_PAGE;
+//        }
+//
+//        if (pageSize == null) {
+//            queryPageSize = DEFAULT_PAGE_SIZE;
+//        } else {
+//            if (pageSize > 1000) {
+//                queryPageSize = 1000;
+//            } else {
+//                queryPageSize = pageSize;
+//            }
+//
+//        }
+//
+//        return PageRequest.of(queryPageNumber, queryPageSize);
+//    }
 }
